tests/compile-fail/fail8.stderr
error[E0759]: `u` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/fail8.rs:12:34
   |
11 | fn f<'a>(u: &U<'a>) {
   |             ------ this data with lifetime `'a`...
12 |     let _: &(dyn F + 'static) = &**u;
   |                                 -^^^
   |                                 |
   |                                 ...is used here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/fail8.rs:12:34
   |
12 |     let _: &(dyn F + 'static) = &**u;
   |                                  ^^^
